<resources>
    <string name="app_name" translatable="false">Avion</string>
    <string name="save">Сохранить</string>
    <string name="search_countries">Search country</string>
    <string name="sign_in_txt">
        I confirm that I have read the
        <a href="https://avion.taxi/privacy"><font color="#FFD335">Privacy Policy</font></a>
        and agree with the terms of the <a href="https://avion.taxi/user-agreement"><font color="#FFD335">License Agreement</font></a>,
        applicable in the country in which I use the service.
    </string>
    <string name="profile_balance_text">Earned Bonuses:</string>
    <string name="free">Free</string>
    <string name="payBonus">Pay with bonuses</string>
    <string name="lulka">Cradle</string>
    <string name="TopFragmentCode">Phone Code</string>
    <string name="TopFragmentPayment">Payment Method</string>
    <string name="TopFragmentPromo">Promo Codes</string>
    <string name="TopFragmentReview">Your Mention About Trip</string>
    <string name="TopFragmentSettings">Settings</string>
    <string name="TopFragmentFavourite">Favourite Addresses</string>
    <string name="TopFragmentAddAddress">Add Address</string>
    <string name="TopFragmentOrder">Order\'s Details</string>
    <string name="TopFragmentTrips">My Trips</string>
    <string name="TopFragmentProfile">Profile</string>
    <string name="TopFragmentTime">Pick-up Time</string>
    <string name="TopFragmentTable">Meeting With Table</string>
    <string name="TopFragmentComment">Leave Comment For A Driver</string>
    <string name="TopFragmentLanguage">Drivers\'s Language</string>
    <string name="TopFragmentKreslo">Baby Chair</string>
    <string name="TopFragmentOptions">Additional Options</string>
    <string name="TopFragmentPoint">Pick-up Point</string>
    <string name="TopFragmentMakeOrder">AVION</string>
    <string name="TopFragmentReg">Choose Region</string>
    <string name="paybonuses">Paid with bonuses:</string>
    <string name="prepayment">Prepayment:</string>
    <string name="paytodriver">Debt(cash):</string>
    <string name="copied">Copied to clipboard</string>
    <string name="copy"><u>Copy</u></string>
    <string name="acq_pay1">Attach</string>
    <string name="cancl">Cancel</string>
    <string name="delt">Delete</string>
    <string name="delCard">Delete this card?</string>
    <string name="pay100">100% pay now</string>
    <string name="pay2080">20% pay now, 80% to driver</string>
    <string name="pay5050">50% pay now, 50% to driver</string>
    <string name="pay_attach">Attach new card</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="American_Samoa">American Samoa</string>
    <string name="Andorra">Andorra</string>
    <string name="Angola">Angola</string>
    <string name="Anguilla">Anguilla</string>
    <string name="Antigua_and_Barbuda">Antigua and Barbuda</string>
    <string name="Armenia">Armenia</string>
    <string name="Argentina">Argentina</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Barbados">Barbados</string>
    <string name="Belarus">Belarus</string>
    <string name="Belgium">Belgium</string>
    <string name="Belize">Belize</string>
    <string name="Benin">Benin</string>
    <string name="Bermuda">Bermuda</string>
    <string name="Bolivia">Bolivia</string>
    <string name="Bosnia_and_Herzegovina">Bosnia and Herzegovina</string>
    <string name="Botswana">Botswana</string>
    <string name="Brazil">Brazil</string>
    <string name="British_Virgin_Islands">British Virgin Islands</string>
    <string name="Brunei_Darusalaam">Brunei Darusalaam</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Burkina_Faso">Burkina Faso</string>
    <string name="Burundi">Burundi</string>
    <string name="Byelorussian">Byelorussian</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Canada">Canada</string>
    <string name="Cape_Verde">Cape Verde</string>
    <string name="Cayman_Islands">Cayman Islands</string>
    <string name="Central_African_Republic">Central African Republic</string>
    <string name="Chad">Chad</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="Christmas_Island">Christmas Island</string>
    <string name="Cocos_Islands">Cocos Islands</string>
    <string name="Colombia">Colombia</string>
    <string name="Commonwealth_of_the_Northern_Mariana_Islands">Commonwealth of the Northern Mariana Islands</string>
    <string name="Comoros_and_Mayotte_Island">Comoros and Mayotte Island</string>
    <string name="Congo">Congo</string>
    <string name="Cook_Islands">Cook Islands</string>
    <string name="Costa_Rica">Costa Rica</string>
    <string name="Croatia">Croatia</string>
    <string name="Cuba">Cuba</string>
    <string name="Cyprus">Cyprus</string>
    <string name="Czech_Republic">Czech Republic</string>
    <string name="Denmark">Denmark</string>
    <string name="Diego_Garcia">Diego Garcia</string>
    <string name="Djibouti">Djibouti</string>
    <string name="Dominica">Dominica</string>
    <string name="Dominican_Republic">Dominican Republic</string>
    <string name="East_Timor">East Timor</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Egypt">Egypt</string>
    <string name="El_Salvador">El Salvador</string>
    <string name="Equatorial_Guinea">Equatorial Guinea</string>
    <string name="Estonia">Estonia</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="Faeroe_Islands">Faeroe Islands</string>
    <string name="Falkland_Islands">Falkland Islands</string>
    <string name="Fiji">Fiji</string>
    <string name="Finland">Finland</string>
    <string name="France">France</string>
    <string name="French_Antilles">French Antilles</string>
    <string name="French_Guiana">French Guiana</string>
    <string name="French_Polynesia">French Polynesia</string>
    <string name="Gabon">Gabon</string>
    <string name="Gambia">Gambia</string>
    <string name="Georgia">Georgia</string>
    <string name="Germany">Germany</string>
    <string name="Ghana">Ghana</string>
    <string name="Gibraltar">Gibraltar</string>
    <string name="Greece">Greece</string>
    <string name="Greenland">Greenland</string>
    <string name="Grenada">Grenada</string>
    <string name="Guam">Guam</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Guinea">Guinea</string>
    <string name="Guinea_Bissau">Guinea-Bissau</string>
    <string name="Guyana">Guyana</string>
    <string name="Haiti">Haiti</string>
    <string name="Honduras">Honduras</string>
    <string name="Hong_Kong">Hong Kong</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="India">India</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Iran">Iran</string>
    <string name="Iraq">Iraq</string>
    <string name="Irish_Republic">Irish Republic</string>
    <string name="Israel">Israel</string>
    <string name="Italy">Italy</string>
    <string name="Ivory_Coast">Ivory Coast</string>
    <string name="Jamaica">Jamaica</string>
    <string name="Japan">Japan</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="Kenya">Kenya</string>
    <string name="Kiribati_Republic">Kiribati Republic</string>
    <string name="Kirgizia">Kirg(h)izia</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Laos">Laos</string>
    <string name="Latvia">Latvia</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Liberia">Liberia</string>
    <string name="Libya">Libya</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Macao">Macao</string>
    <string name="Macedonia">Macedonia</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Malawi">Malawi</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Maldives">Maldives</string>
    <string name="Mali">Mali</string>
    <string name="Malta">Malta</string>
    <string name="Marshall_Islands">Marshall Islands</string>
    <string name="Martinique">Martinique</string>
    <string name="Mauritania">Mauritania</string>
    <string name="Mauritius">Mauritius</string>
    <string name="Mexico">Mexico</string>
    <string name="Micronesia">Micronesia</string>
    <string name="Monaco">Monaco</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Montserrat">Montserrat</string>
    <string name="Morocco">Morocco</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Myanmar">Myanmar</string>
    <string name="Namibia">Namibia</string>
    <string name="Nauru">Nauru</string>
    <string name="Nepal">Nepal</string>
    <string name="Netherlands">Netherlands</string>
    <string name="Netherlands_Antilles">Netherlands Antilles</string>
    <string name="New_Caledonia">New Caledonia</string>
    <string name="New_Zealand">New Zealand</string>
    <string name="Nicaragua">Nicaragua</string>
    <string name="Niger">Niger</string>
    <string name="Nigeria">Nigeria</string>
    <string name="Niue">Niue</string>
    <string name="Norfolk_Island">Norfolk Island</string>
    <string name="North_Korea">North Korea</string>
    <string name="North_Yemen">North Yemen</string>
    <string name="Northern_Mariana_Islands">Northern Mariana Islands</string>
    <string name="Norway">Norway</string>
    <string name="Oman">Oman</string>
    <string name="Pakistan">Pakistan</string>
    <string name="enter_flight_number">Enter flight number</string>
    <string name="you_are_departing_from">You are departing from</string>
    <string name="select">SELECT</string>
    <string name="child_seat">Child restraint</string>
    <string name="meeting_with_a_table">Meeting with a table</string>
    <string name="car_with_yellow_plates">Car with yellow plates</string>
    <string name="smoking_salon">Smoking salon</string>
    <string name="pet_transportation">Pet transportation</string>
    <string name="oversized_baggage">Oversized baggage</string>
    <string name="invoice_for_company">Invoice for company </string>
    <string name="english_speaking_driver">English speaking Driver</string>
    <string name="driver_comment">Comments to the driver</string>
    <string name="text_on_the_plate">Text on the plate...</string>
    <string name="meetwtable_screen_txt">The driver will meet you at the train station with a sign “......”  at the carriage exit</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="enter_the_address">Enter the address</string>
    <string name="airports">Airports</string>
    <string name="train">Train</string>
    <string name="favorit">Favorit</string>
    <string name="add">ADD</string>
    <string name="your_trips">Your trips</string>
    <string name="payment_settings">Payment settings</string>
    <string name="favorite_addresses">Favorite addresses</string>
    <string name="promocodes">Promocodes</string>
    <string name="help_desk">Help desk</string>
    <string name="home_address">Home Address</string>
    <string name="work_address">Work address</string>
    <string name="address_name">Address Name</string>
    <string name="Address">Address</string>
    <string name="exit">Exit</string>
</resources>