<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createfavorite_constaintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewFavoriteAddressFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/createfavoriteaddress_addressname_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/address_name"
            android:textColor="@color/colorAccent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createfavoriteaddress_home_btn"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:background="@drawable/grey_border_backgrounds"
        android:drawableStart="@drawable/ic_home_grey"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:text="@string/home_address"
        android:textAlignment="textStart"
        android:textSize="13dp"
        android:textColor="@color/desc_txt_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/createfavoriteaddress_work_btn"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:background="@drawable/grey_border_backgrounds"
        android:drawableStart="@drawable/ic_work_grey"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:textSize="13dp"
        android:text="@string/work_address"
        android:textAlignment="textStart"
        android:textColor="@color/desc_txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createfavoriteaddress_home_btn">

        <EditText
            android:id="@+id/createfavoriteaddress_address_AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/Address"
            android:textColor="@color/colorAccent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createfavoriteaddress_add_button"
        style="@style/MyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/createfavoriteaddress_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/createfavoriteaddress_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>